language, main menu reduced but savings still not working, premium started

--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_arrow_back"
-        android:contentDescription="Back"
+        android:contentDescription="@string/content_description_back"
         android:layout_margin="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -23,7 +23,7 @@
         android:id="@+id/about_us_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="About Us"
+        android:text="@string/about_us_title"
         android:textSize="24sp"
         android:textStyle="bold"
         android:textColor="@android:color/black"
@@ -62,7 +62,7 @@
                     android:id="@+id/about_us_content"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="At SmartStack Solutions, our mission is to provide users with solutions that bring order to their daily lives and finances. We aim to empower users to efficiently collect, organize, and retrieve relevant information, documents, and photos. By doing so, we help you stay organized and manage your finances effectively.\n\nOur team is dedicated to creating user-friendly solutions that cater to the needs of individuals seeking better financial management and organization. We believe that with the right tools, everyone can take control of their finances and improve their financial well-being.\n\nIf you have any questions or need further information about our mission and services, feel free to reach out to us. Email: service@smartstack-solutions.com. We're here to help you make the most out of SmartStack Solutions!"
+                    android:text="@string/about_us_content"
                     android:textSize="12sp"
                     android:textColor="@android:color/black"
                     android:padding="4dp"
