--- a/app/src/main/res/layout/activity_create_spending.xml
+++ b/app/src/main/res/layout/activity_create_spending.xml
@@ -29,7 +29,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="@string/create_new_Closed_Payment"
+        android:text="@string/create_new_closed_payment"
         android:textStyle="bold"
         android:textSize="24sp"
         app:layout_constraintTop_toTopOf="parent"
@@ -42,7 +42,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Title"
+        android:text="@string/title"
         android:textStyle="bold"
         android:textSize="18sp"
         app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
@@ -115,7 +115,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="@string/Date"
+        android:text="@string/date"
         android:textStyle="bold"
         android:textSize="18sp"
         app:layout_constraintTop_toBottomOf="@+id/edtAmountSpending"
@@ -155,7 +155,7 @@
         android:layout_height="48dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/rounded_frame_background_blue"
-        android:text="Select a Category"
+        android:text="@string/select_a_category"
         app:layout_constraintTop_toBottomOf="@+id/txtCategorySpending"
         app:layout_constraintStart_toStartOf="@+id/guidelineStart"
         app:layout_constraintEnd_toEndOf="@+id/guidelineEnd" />
@@ -166,7 +166,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Subcategory"
+        android:text="@string/subcategory"
         android:textStyle="bold"
         android:textSize="18sp"
         app:layout_constraintTop_toBottomOf="@+id/spinnerCategoriesSpending"
@@ -200,7 +200,7 @@
         android:layout_height="48dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/rounded_frame_background_blue"
-        android:hint="Search or Select Vendor"
+        android:hint="@string/search_or_select_vendor"
         android:paddingLeft="15dp"
         android:paddingRight="15dp"
         android:textColorHint="#A5A5A5"
@@ -216,7 +216,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:hint="Enter custom vendor"
+        android:hint="@string/enter_custom_vendor"
         android:visibility="gone"
         android:background="@drawable/rounded_frame_background_blue"
         app:layout_constraintTop_toBottomOf="@+id/autoCompleteVendorSpending"
@@ -229,7 +229,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="@string/comment"
+        android:text="@string/comments"
         android:textStyle="bold"
         android:textSize="18sp"
         app:layout_constraintTop_toBottomOf="@+id/edtCustomVendorSpending"
@@ -258,7 +258,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="@string/Attachment"
+        android:text="@string/attachment"
         android:textStyle="bold"
         android:textSize="18sp"
         app:layout_constraintTop_toBottomOf="@+id/edtCommentSpending"
@@ -270,7 +270,7 @@
         android:layout_height="36dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="0dp"
-        android:text="@string/Upload"
+        android:text="@string/upload"
         android:background="@drawable/rounded_frame_background_blue"
         app:layout_constraintStart_toEndOf="@+id/txtAttachmentSpending"
         app:layout_constraintTop_toTopOf="@+id/txtAttachmentSpending" />
@@ -280,7 +280,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Image added"
+        android:text="@string/image_added"
         android:textStyle="bold"
         android:visibility="gone"
         app:layout_constraintTop_toBottomOf="@+id/btnUploadImageSpending"
