--- a/app/src/main/res/layout/activity_datasecurity.xml
+++ b/app/src/main/res/layout/activity_datasecurity.xml
@@ -23,7 +23,7 @@
         android:id="@+id/data_security_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Data Security"
+        android:text="@string/data_security_title"
         android:textSize="24sp"
         android:textStyle="bold"
         android:textColor="@android:color/black"
@@ -53,7 +53,7 @@
                 android:id="@+id/question_1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="1. How does SmartStack Solutions protect my data?"
+                android:text="@string/data_security_question_1"
                 android:textSize="12sp"
                 android:textColor="@android:color/black"
                 android:background="@drawable/nav_item_background_light"
@@ -64,7 +64,7 @@
                 android:id="@+id/answer_1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Answer: SmartStack Solutions implements security measures to protect your data. This includes secure login protocols, and basic access controls. We rely on trusted cloud services to store and manage data securely."
+                android:text="@string/data_security_answer_1"
                 android:textSize="12sp"
                 android:textColor="@android:color/black"
                 android:background="@drawable/nav_item_background_dark"
@@ -75,7 +75,7 @@
                 android:id="@+id/question_2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="2. Is my payment information stored securely?"
+                android:text="@string/data_security_question_2"
                 android:textSize="12sp"
                 android:textColor="@android:color/black"
                 android:background="@drawable/nav_item_background_light"
@@ -86,7 +86,7 @@
                 android:id="@+id/answer_2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Answer: SmartStack Solutions is designed for users to manually input financial data without the need for payment transactions."
+                android:text="@string/data_security_answer_2"
                 android:textSize="12sp"
                 android:textColor="@android:color/black"
                 android:background="@drawable/nav_item_background_dark"
@@ -97,7 +97,7 @@
                 android:id="@+id/question_3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="3. How is my personal information handled?"
+                android:text="@string/data_security_question_3"
                 android:textSize="12sp"
                 android:textColor="@android:color/black"
                 android:background="@drawable/nav_item_background_light"
@@ -108,7 +108,7 @@
                 android:id="@+id/answer_3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Answer: Personal information is collected minimally and used solely for providing our services. It is stored securely in the cloud. For more details, read our Privacy Policy hosted by PrivacyPolicies"
+                android:text="@string/data_security_answer_3"
                 android:textSize="12sp"
                 android:textColor="@android:color/black"
                 android:background="@drawable/nav_item_background_dark"
@@ -119,7 +119,7 @@
                 android:id="@+id/question_4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="4. What measures are in place to prevent unauthorized access?"
+                android:text="@string/data_security_question_4"
                 android:textSize="12sp"
                 android:textColor="@android:color/black"
                 android:background="@drawable/nav_item_background_light"
@@ -130,7 +130,7 @@
                 android:id="@+id/answer_4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Answer: To prevent unauthorized access, SmartStack Solutions uses strong password requirements and session management protocols. We also recommend users to regularly update their passwords and to avoid sharing their login credentials."
+                android:text="@string/data_security_answer_4"
                 android:textSize="12sp"
                 android:textColor="@android:color/black"
                 android:background="@drawable/nav_item_background_dark"
@@ -141,7 +141,7 @@
                 android:id="@+id/question_5"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="5. How does SmartStack Solutions ensure the integrity of my data?"
+                android:text="@string/data_security_question_5"
                 android:textSize="12sp"
                 android:textColor="@android:color/black"
                 android:background="@drawable/nav_item_background_light"
@@ -152,7 +152,7 @@
                 android:id="@+id/answer_5"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Answer: Data integrity is maintained through regular data backups and real-time data synchronization. We also perform regular checks to ensure data accuracy and consistency."
+                android:text="@string/data_security_answer_5"
                 android:textSize="12sp"
                 android:textColor="@android:color/black"
                 android:background="@drawable/nav_item_background_dark"
@@ -163,7 +163,7 @@
                 android:id="@+id/question_6"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="6. What should I do if I suspect a security breach?"
+                android:text="@string/data_security_question_6"
                 android:textSize="12sp"
                 android:textColor="@android:color/black"
                 android:background="@drawable/nav_item_background_light"
@@ -174,7 +174,7 @@
                 android:id="@+id/answer_6"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Answer: If you suspect a security breach, please contact our support team immediately via the 'Help &amp; Support' section of the app. We will investigate the issue promptly and take necessary actions to secure your account."
+                android:text="@string/data_security_answer_6"
                 android:textSize="12sp"
                 android:textColor="@android:color/black"
                 android:background="@drawable/nav_item_background_dark"
@@ -185,7 +185,7 @@
                 android:id="@+id/question_7"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="7. How can I enhance my own security while using SmartStack Solutions?"
+                android:text="@string/data_security_question_7"
                 android:textSize="12sp"
                 android:textColor="@android:color/black"
                 android:background="@drawable/nav_item_background_light"
@@ -196,7 +196,7 @@
                 android:id="@+id/answer_7"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Answer: Enhance your security by using a strong, unique password for your SmartStack Solutions account. Ensure your device is protected with a password or biometric lock, and avoid using public Wi-Fi when accessing the app."
+                android:text="@string/data_security_answer_7"
                 android:textSize="12sp"
                 android:textColor="@android:color/black"
                 android:background="@drawable/nav_item_background_dark"
@@ -207,7 +207,7 @@
                 android:id="@+id/question_8"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="8. Does SmartStack Solutions comply with data protection regulations?"
+                android:text="@string/data_security_question_8"
                 android:textSize="12sp"
                 android:textColor="@android:color/black"
                 android:background="@drawable/nav_item_background_light"
@@ -217,7 +217,7 @@
                 android:id="@+id/answer_8"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Answer: Yes, SmartStack Solutions complies with relevant data protection regulations. We are committed to protecting your privacy and ensuring compliance with applicable laws."
+                android:text="@string/data_security_answer_8"
                 android:textSize="12sp"
                 android:textColor="@android:color/black"
                 android:background="@drawable/nav_item_background_dark"
@@ -228,7 +228,7 @@
                 android:id="@+id/question_9"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="9. What kind of encryption does SmartStack Solutions use?"
+                android:text="@string/data_security_question_9"
                 android:textSize="12sp"
                 android:textColor="@android:color/black"
                 android:background="@drawable/nav_item_background_light"
@@ -239,7 +239,7 @@
                 android:id="@+id/answer_9"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Answer: SmartStackSolutions uses industry-standard encryption methods for data in transit to protect your information from unauthorized access during transmission."
+                android:text="@string/data_security_answer_9"
                 android:textSize="12sp"
                 android:textColor="@android:color/black"
                 android:background="@drawable/nav_item_background_dark"
@@ -250,7 +250,7 @@
                 android:id="@+id/question_10"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="10. How often are security audits conducted?"
+                android:text="@string/data_security_question_10"
                 android:textSize="12sp"
                 android:textColor="@android:color/black"
                 android:background="@drawable/nav_item_background_light"
@@ -261,7 +261,7 @@
                 android:id="@+id/answer_10"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Answer: Security audits are conducted periodically to identify and address potential vulnerabilities, helping us maintain high security standards and protect your data effectively."
+                android:text="@string/data_security_answer_10"
                 android:textSize="12sp"
                 android:textColor="@android:color/black"
                 android:background="@drawable/nav_item_background_dark"
@@ -272,7 +272,7 @@
                 android:id="@+id/question_11"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="11. What happens to my data if I delete my account?"
+                android:text="@string/data_security_question_11"
                 android:textSize="12sp"
                 android:textColor="@android:color/black"
                 android:background="@drawable/nav_item_background_light"
@@ -283,7 +283,7 @@
                 android:id="@+id/answer_11"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Answer: If you delete your account, all associated data is permanently removed from our servers. We retain no personal information beyond the period necessary to fulfill our legal obligations."
+                android:text="@string/data_security_answer_11"
                 android:textSize="12sp"
                 android:textColor="@android:color/black"
                 android:background="@drawable/nav_item_background_dark"
@@ -294,7 +294,7 @@
                 android:id="@+id/question_12"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="12. How can I contact SmartStackSolutions regarding data security concerns?"
+                android:text="@string/data_security_question_12"
                 android:textSize="12sp"
                 android:textColor="@android:color/black"
                 android:background="@drawable/nav_item_background_light"
@@ -305,7 +305,7 @@
                 android:id="@+id/answer_12"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Answer: If you have any data security concerns, you can reach out to our support team via the 'Help &amp; Support' section of the app. Our team is available to address your queries and ensure your data is secure."
+                android:text="@string/data_security_answer_12"
                 android:textSize="12sp"
                 android:textColor="@android:color/black"
                 android:background="@drawable/nav_item_background_dark"
@@ -316,7 +316,7 @@
                 android:id="@+id/question_13"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="13. What measures are in place to protect against data loss?"
+                android:text="@string/data_security_question_13"
                 android:textSize="12sp"
                 android:textColor="@android:color/black"
                 android:background="@drawable/nav_item_background_light"
@@ -327,7 +327,7 @@
                 android:id="@+id/answer_13"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Answer: To protect against data loss, SmartStackSolutions performs regular backups and maintains data redundancy. Our systems are designed to ensure data availability and integrity."
+                android:text="@string/data_security_answer_13"
                 android:textSize="12sp"
                 android:textColor="@android:color/black"
                 android:background="@drawable/nav_item_background_dark"
@@ -338,7 +338,7 @@
                 android:id="@+id/question_14"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Two-Factor Authentication (2FA):"
+                android:text="@string/data_security_question_14"
                 android:textSize="12sp"
                 android:textColor="@android:color/black"
                 android:background="@drawable/nav_item_background_light"
@@ -349,7 +349,7 @@
                 android:id="@+id/answer_14"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Answer: While we currently do not offer 2FA, we are considering its implementation to enhance account security. However, using a strong, unique password and keeping your device secure provides significant protection."
+                android:text="@string/data_security_answer_14"
                 android:textSize="12sp"
                 android:textColor="@android:color/black"
                 android:background="@drawable/nav_item_background_dark"
