--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:layout_marginEnd="55dp"
         android:layout_marginBottom="112dp"
         android:background="@drawable/btnlog"
-        android:text="Log in"
+        android:text="@string/log_in"
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="15sp"
@@ -42,7 +42,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/ssboldbody"
         android:gravity="center"
-        android:text="Organize your Finances \n\nand simplify your Life!"
+        android:text="@string/main_tagline"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textColor="#202737"
         android:textSize="20sp"
@@ -61,7 +61,7 @@
         android:layout_marginEnd="55dp"
         android:layout_marginBottom="182dp"
         android:background="@drawable/btnlogin"
-        android:text="Sign up"
+        android:text="@string/sign_up"
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="15sp"
