--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -42,7 +42,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:menu="@menu/top_nav"
                 app:navigationIcon="@drawable/ic_menu"
-                app:title="SmartStack Solutions"
+                app:title="@string/app_title"
                 app:titleCentered="true"
                 android:paddingEnd="12dp"
                 android:paddingStart="12dp" />
@@ -104,7 +104,7 @@
                 android:id="@+id/tvBills"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Open Payments"
+                android:text="@string/open_payments"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:textColor="@android:color/black"
@@ -130,7 +130,7 @@
                 android:id="@+id/tvIncoming"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Incoming"
+                android:text="@string/incoming"
                 android:textSize="16sp"
                 android:textColor="@android:color/black"
                 app:layout_constraintStart_toStartOf="parent"
@@ -154,7 +154,7 @@
                 android:id="@+id/tvOverdue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Overdue"
+                android:text="@string/overdue"
                 android:textSize="16sp"
                 android:textColor="@android:color/black"
                 app:layout_constraintStart_toStartOf="parent"
@@ -189,7 +189,7 @@
                 android:id="@+id/tvSpendings"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Closed Payments"
+                android:text="@string/closed_payments"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:textColor="@android:color/black"
@@ -215,7 +215,7 @@
                 android:id="@+id/tvEssential"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Essential"
+                android:text="@string/essential"
                 android:textSize="16sp"
                 android:textColor="@android:color/black"
                 app:layout_constraintStart_toStartOf="parent"
@@ -239,7 +239,7 @@
                 android:id="@+id/tvNonEssential"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Non-essential"
+                android:text="@string/non_essential"
                 android:textSize="16sp"
                 android:textColor="@android:color/black"
                 app:layout_constraintStart_toStartOf="parent"
@@ -275,7 +275,7 @@
                 android:id="@+id/tvIncome"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Income"
+                android:text="@string/income"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:textColor="@android:color/black"
@@ -301,7 +301,7 @@
                 android:id="@+id/tvRecurring"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Recurring"
+                android:text="@string/recurring"
                 android:textSize="16sp"
                 android:textColor="@android:color/black"
                 app:layout_constraintStart_toStartOf="parent"
@@ -325,7 +325,7 @@
                 android:id="@+id/tvOneTime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="One-time"
+                android:text="@string/one_time"
                 android:textSize="16sp"
                 android:textColor="@android:color/black"
                 app:layout_constraintStart_toStartOf="parent"
@@ -361,7 +361,7 @@
                 android:id="@+id/tvTotal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Total Net Savings"
+                android:text="@string/total_net_savings"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:textColor="@android:color/black"
@@ -388,7 +388,7 @@
                 android:id="@+id/tvSetSavingTarget"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Saving Target"
+                android:text="@string/set_saving_target"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:textColor="@android:color/black"
@@ -419,7 +419,7 @@
                 android:id="@+id/tvTargetAchieved"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Target Achieved"
+                android:text="@string/target_achieved"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:textColor="@android:color/black"
@@ -484,7 +484,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="16dp"
-                android:contentDescription="@string/create_new_Open_Payment" />
+                android:contentDescription="@string/create_new_open_payment" />
 
             <com.google.android.gms.ads.AdView
                 android:id="@+id/adView"
