--- a/app/src/main/res/layout/dialog_box_bill_calendar.xml
+++ b/app/src/main/res/layout/dialog_box_bill_calendar.xml
@@ -54,7 +54,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/titledialog"
+                    android:text="@string/title"
                     android:textSize="14sp"
                     android:textColor="@android:color/black" />
 
@@ -89,7 +89,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Subcategory"
+                    android:text="@string/subcategory"
                     android:layout_marginTop="4dp"
                     android:textSize="14sp"
                     android:textColor="@android:color/black" />
@@ -107,7 +107,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Vendor"
+                    android:text="@string/vendor"
                     android:layout_marginTop="4dp"
                     android:textSize="14sp"
                     android:textColor="@android:color/black" />
@@ -125,7 +125,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Amount"
+                    android:text="@string/amount"
                     android:layout_marginTop="4dp"
                     android:textSize="14sp"
                     android:textColor="@android:color/black" />
@@ -143,7 +143,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Date"
+                    android:text="@string/date"
                     android:layout_marginTop="4dp"
                     android:textSize="14sp"
                     android:textColor="@android:color/black" />
@@ -161,7 +161,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Repeat"
+                    android:text="@string/repeat"
                     android:layout_marginTop="4dp"
                     android:textSize="14sp"
                     android:textColor="@android:color/black" />
@@ -179,7 +179,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Comment"
+                    android:text="@string/comments"
                     android:layout_marginTop="4dp"
                     android:textSize="14sp"
                     android:textColor="@android:color/black" />
@@ -197,7 +197,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Attachment"
+                    android:text="@string/attachment"
                     android:layout_marginTop="4dp"
                     android:textSize="14sp"
                     android:textColor="@android:color/black" />
@@ -221,7 +221,7 @@
                     android:id="@+id/btnCloseDialogBillCalendar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Close"
+                    android:text="@string/close"
                     android:textSize="14sp"
                     app:backgroundTint="#023047"
                     android:layout_centerInParent="true" />
