--- a/app/src/main/res/layout/items_spendings.xml
+++ b/app/src/main/res/layout/items_spendings.xml
@@ -19,7 +19,7 @@
             android:id="@+id/labelTitleItemsSpendings"
             android:layout_width="120dp"
             android:layout_height="18dp"
-            android:text="@string/TiTle"
+            android:text="@string/title"
             android:textColor="@color/black"
             android:textSize="12sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -62,7 +62,7 @@
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="@string/CaTegory"
+            android:text="@string/category"
             android:textColor="@color/black"
             android:textSize="12sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -76,7 +76,7 @@
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="@string/aMount"
+            android:text="@string/amount"
             android:textColor="@color/black"
             android:textSize="12sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -141,7 +141,7 @@
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="@string/purchase_Date"
+            android:text="@string/purchase_date"
             android:textColor="@color/black"
             android:textSize="12sp"
             app:layout_constraintStart_toStartOf="parent"
