--- a/app/src/main/res/layout/activity_faqs.xml
+++ b/app/src/main/res/layout/activity_faqs.xml
@@ -64,7 +64,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="1. What is SmartStack Solutions?"
+                    android:text="@string/faqs_question_1"
                     android:textSize="12sp"
                     android:textColor="@android:color/black" />
 
@@ -93,7 +93,7 @@
                     android:id="@+id/answer_1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Answer: SmartStack Solutions is a comprehensive financial management app designed to help users keep track of their payments and incomes. It allows users to categorize transactions, set reminders, and view financial data in various formats to help with budgeting and financial planning."
+                    android:text="@string/faqs_answer_1"
                     android:textSize="12sp"
                     android:textColor="@android:color/black"
                     android:background="@drawable/background_blue1"
@@ -114,7 +114,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="2. How do I add a new 'open payment'?"
+                    android:text="@string/faqs_question_2"
                     android:textSize="12sp"
                     android:textColor="@android:color/black" />
 
@@ -143,7 +143,7 @@
                     android:id="@+id/answer_2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Answer: To add a new 'open payment', go to the 'Open Payments' section of the app, click on the 'Plus' button, and fill in the necessary details such as title, amount, and date. You can also add a document or other relevant information."
+                    android:text="@string/faqs_answer_2"
                     android:textSize="12sp"
                     android:textColor="@android:color/black"
                     android:background="@drawable/background_blue1"
@@ -164,7 +164,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="3. Can I categorize my payments/expenses?"
+                    android:text="@string/faqs_question_3"
                     android:textSize="12sp"
                     android:textColor="@android:color/black" />
 
@@ -193,7 +193,7 @@
                     android:id="@+id/answer_3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Answer: Yes, SmartStack Solutions allows you to categorize your payments/expenses into predefined categories and subcategories."
+                    android:text="@string/faqs_answer_3"
                     android:textSize="12sp"
                     android:textColor="@android:color/black"
                     android:background="@drawable/background_blue1"
@@ -214,7 +214,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="4. How can I view my payments/expenses by status (incoming, overdue, recurring)?"
+                    android:text="@string/faqs_question_4"
                     android:textSize="12sp"
                     android:textColor="@android:color/black" />
 
@@ -243,7 +243,7 @@
                     android:id="@+id/answer_4"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Answer: In the 'Open Payments' section, you can filter your open payments based on their status. Paid payments move to 'Closed Payments'. Overdue payments appear under 'Overdue', and upcoming payments are listed under 'Incoming'. Recurring payments will be shown in 'Recurring'."
+                    android:text="@string/faqs_answer_4"
                     android:textSize="12sp"
                     android:textColor="@android:color/black"
                     android:background="@drawable/background_blue1"
@@ -264,7 +264,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="5. What are 'essential' and 'non-essential' payments, and what are the differences?"
+                    android:text="@string/faqs_question_5"
                     android:textSize="12sp"
                     android:textColor="@android:color/black" />
 
@@ -293,7 +293,7 @@
                     android:id="@+id/answer_5"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Answer: 'Essential' spendings are necessary expenses like rent or groceries. 'Non-essential' spendings include optional items, like streaming services. In SmartStack Solutions, categories and subcategories are predefined as either 'essential' or 'non-essential,' and changes are not possible. If a payment lacks a category, it won’t appear in the Main Menu as either type."
+                    android:text="@string/faqs_answer_5"
                     android:textSize="12sp"
                     android:textColor="@android:color/black"
                     android:background="@drawable/background_blue1"
@@ -314,7 +314,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="6. Is it possible to scan payments?"
+                    android:text="@string/faqs_question_6"
                     android:textSize="12sp"
                     android:textColor="@android:color/black" />
 
@@ -343,7 +343,7 @@
                     android:id="@+id/answer_6"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Answer: You can upload your document in SmartStack Solutions but an automatic scanning of the document is not possible yet."
+                    android:text="@string/faqs_answer_6"
                     android:textSize="12sp"
                     android:textColor="@android:color/black"
                     android:background="@drawable/background_blue1"
@@ -364,7 +364,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="7. Can I track my income with SmartStack Solutions?"
+                    android:text="@string/faqs_question_7"
                     android:textSize="12sp"
                     android:textColor="@android:color/black" />
 
@@ -393,7 +393,7 @@
                     android:id="@+id/answer_7"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Answer: Yes, you can track your income by adding income entries in the 'Income' section of the app. Fill in details such as title, amount, and date received to keep an accurate record of your earnings."
+                    android:text="@string/faqs_answer_7"
                     android:textSize="12sp"
                     android:textColor="@android:color/black"
                     android:background="@drawable/background_blue1"
@@ -414,7 +414,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="8. What security measures does SmartStack Solutions have to protect my data?"
+                    android:text="@string/faqs_question_8"
                     android:textSize="12sp"
                     android:textColor="@android:color/black" />
 
@@ -442,7 +442,7 @@
                     android:id="@+id/answer_8"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Answer: SmartStack Solutions employs robust security measures such as data encryption, secure login protocols, and regular backups to ensure your financial data is protected. Additionally, the app does not store sensitive payment information."
+                    android:text="@string/faqs_answer_8"
                     android:textSize="12sp"
                     android:textColor="@android:color/black"
                     android:background="@drawable/background_blue1"
@@ -463,7 +463,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="9. What is the Premium Account, and what are its benefits?"
+                    android:text="@string/faqs_question_9"
                     android:textSize="12sp"
                     android:textColor="@android:color/black" />
 
@@ -491,7 +491,7 @@
                     android:id="@+id/answer_9"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Answer: The Premium Account unlocks all the functionalities of SmartStack Solutions. It allows you to use all features besides the basic ones. See details in 'Unlock Premium Features'. The Premium Account is ideal for users who like to benefit from extensive tracking and management capabilities."
+                    android:text="@string/faqs_answer_9"
                     android:textSize="12sp"
                     android:textColor="@android:color/black"
                     android:background="@drawable/background_blue1"
@@ -512,7 +512,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="10. How can I upgrade to the Premium Account?"
+                    android:text="@string/faqs_question_10"
                     android:textSize="12sp"
                     android:textColor="@android:color/black" />
 
@@ -540,7 +540,7 @@
                     android:id="@+id/answer_10"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Answer: To upgrade to the Premium Account, go to the 'Menu' section and select 'Unlock Premium Features.' Follow the instructions to complete your purchase and unlock all features."
+                    android:text="@string/faqs_answer_10"
                     android:textSize="12sp"
                     android:textColor="@android:color/black"
                     android:background="@drawable/background_blue1"
@@ -561,7 +561,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="11. What is the difference between open payments and closed payments?"
+                    android:text="@string/faqs_question_11"
                     android:textSize="12sp"
                     android:textColor="@android:color/black" />
 
@@ -589,7 +589,7 @@
                     android:id="@+id/answer_11"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Answer: Open payments are records of transactions where you have received a service or product and still need to make a payment. Closed payments, on the other hand, are records of your past expenses. The app allows you to track both to help you manage your finances better."
+                    android:text="@string/faqs_answer_11"
                     android:textSize="12sp"
                     android:textColor="@android:color/black"
                     android:background="@drawable/background_blue1"
@@ -610,7 +610,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="12. How do I set a saving target?"
+                    android:text="@string/faqs_question_12"
                     android:textSize="12sp"
                     android:textColor="@android:color/black" />
 
@@ -638,7 +638,7 @@
                     android:id="@+id/answer_12"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Answer: To set a saving target, navigate to the button in the main menu. Click on it and select 'Set a Saving Target,' specify your target reason, target amount and period. You can track your monthly progress toward achieving your goal in the main menu."
+                    android:text="@string/faqs_answer_12"
                     android:textSize="12sp"
                     android:textColor="@android:color/black"
                     android:background="@drawable/background_blue1"
@@ -659,7 +659,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="13. Can I set multiple saving targets?"
+                    android:text="@string/faqs_question_13"
                     android:textSize="12sp"
                     android:textColor="@android:color/black" />
 
@@ -687,7 +687,7 @@
                     android:id="@+id/answer_13"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Answer: Yes, you can set multiple saving targets in different time periods. Each target is tracked individually in the main menu, where you can see your progress for each. Note that overlapping periods are not possible, so be sure to choose non-overlapping periods for different targets."
+                    android:text="@string/faqs_answer_13"
                     android:textSize="12sp"
                     android:textColor="@android:color/black"
                     android:background="@drawable/background_blue1"
@@ -708,7 +708,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="14. What do I do if I encounter a problem with the app?"
+                    android:text="@string/faqs_question_14"
                     android:textSize="12sp"
                     android:textColor="@android:color/black" />
 
@@ -736,7 +736,7 @@
                     android:id="@+id/answer_14"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Answer: If you encounter any issues with the app, you can contact our support team via service@smartstack-solutions.com. Provide a detailed description of the problem, and our team will assist you promptly."
+                    android:text="@string/faqs_answer_14"
                     android:textSize="12sp"
                     android:textColor="@android:color/black"
                     android:background="@drawable/background_blue1"
@@ -758,7 +758,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="15. How does the notifications system work in SmartStack Solutions, and what features does it include?"
+                    android:text="@string/faqs_question_15"
                     android:textSize="12sp"
                     android:textColor="@android:color/black" />
 
@@ -786,7 +786,7 @@
                     android:id="@+id/answer_15"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Answer: In SmartStack Solutions, notifications are created automatically three days before an open payment’s due date, ensuring timely reminders. Notifications appear both within the app, helping you stay informed. Users can view, mark as read, or delete notifications directly in the app. Notifications older than 30 days are automatically removed. This setup ensures you’re consistently reminded of upcoming payments without needing to adjust settings manually."
+                    android:text="@string/faqs_answer_15"
                     android:textSize="12sp"
                     android:textColor="@android:color/black"
                     android:background="@drawable/background_blue1"
