--- a/app/src/main/res/layout/activity_my_income.xml
+++ b/app/src/main/res/layout/activity_my_income.xml
@@ -24,7 +24,7 @@
                 android:layout_height="59dp"
                 app:menu="@menu/top_nav"
                 app:navigationIcon="@drawable/ic_menu"
-                app:title="Income"
+                app:title="@string/income"
                 app:titleCentered="true"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -38,7 +38,7 @@
                 style="?attr/materialButtonOutlinedStyle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="All"
+                android:text="@string/all"
                 android:textSize="10sp"
                 android:textColor="@color/bluedark"
                 app:layout_constraintTop_toBottomOf="@+id/materialToolbarIncome"
