--- a/app/src/main/res/layout/dialog_box_income.xml
+++ b/app/src/main/res/layout/dialog_box_income.xml
@@ -63,7 +63,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/titledialog"
+                    android:text="@string/title"
                     android:textSize="14sp"
                     android:textColor="@android:color/black" />
 
@@ -100,7 +100,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Subcategory"
+                    android:text="@string/subcategory"
                     android:layout_marginTop="4dp"
                     android:textSize="14sp"
                     android:textColor="@android:color/black" />
@@ -119,7 +119,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Amount"
+                    android:text="@string/amount"
                     android:layout_marginTop="4dp"
                     android:textSize="14sp"
                     android:textColor="@android:color/black" />
@@ -138,7 +138,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Date"
+                    android:text="@string/date"
                     android:layout_marginTop="4dp"
                     android:textSize="14sp"
                     android:textColor="@android:color/black" />
@@ -157,7 +157,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Repeat"
+                    android:text="@string/repeat"
                     android:layout_marginTop="4dp"
                     android:textSize="14sp"
                     android:textColor="@android:color/black" />
@@ -176,7 +176,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Comment"
+                    android:text="@string/comments"
                     android:layout_marginTop="4dp"
                     android:textSize="14sp"
                     android:textColor="@android:color/black" />
@@ -202,7 +202,7 @@
                     android:id="@+id/btnCloseDialogIncome"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Close"
+                    android:text="@string/close"
                     android:textSize="14sp"
                     app:backgroundTint="#023047"
                     android:layout_centerInParent="true" />
@@ -210,7 +210,7 @@
                     android:id="@+id/btnSaveChangesIncome"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Save"
+                    android:text="@string/save"
                     android:textSize="14sp"
                     app:backgroundTint="#1E97F4"
                     android:layout_alignParentEnd="true"
