--- a/app/src/main/res/layout/dialog_box_income_calendar.xml
+++ b/app/src/main/res/layout/dialog_box_income_calendar.xml
@@ -46,7 +46,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/titledialog"
+                    android:text="@string/title"
                     android:textSize="14sp"
                     android:textColor="@android:color/black" />
 
@@ -83,7 +83,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Subcategory"
+                    android:text="@string/subcategory"
                     android:layout_marginTop="4dp"
                     android:textSize="14sp"
                     android:textColor="@android:color/black" />
@@ -102,7 +102,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Amount"
+                    android:text="@string/amount"
                     android:layout_marginTop="4dp"
                     android:textSize="14sp"
                     android:textColor="@android:color/black" />
@@ -121,7 +121,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Date"
+                    android:text="@string/date"
                     android:layout_marginTop="4dp"
                     android:textSize="14sp"
                     android:textColor="@android:color/black" />
@@ -140,7 +140,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Repeat"
+                    android:text="@string/repeat"
                     android:layout_marginTop="4dp"
                     android:textSize="14sp"
                     android:textColor="@android:color/black" />
@@ -159,7 +159,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Comment"
+                    android:text="@string/comments"
                     android:layout_marginTop="4dp"
                     android:textSize="14sp"
                     android:textColor="@android:color/black" />
@@ -185,7 +185,7 @@
                     android:id="@+id/btnCloseDialogIncomeCalendar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Close"
+                    android:text="@string/close"
                     android:textSize="14sp"
                     app:backgroundTint="#023047"
                     android:layout_centerInParent="true" />
