--- a/app/src/main/res/layout/item_savings_target.xml
+++ b/app/src/main/res/layout/item_savings_target.xml
@@ -11,7 +11,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="Target Name"
+        android:text="@string/target_name"
         android:textSize="16sp"
         android:textColor="@android:color/black"
         android:textStyle="bold" />
