--- a/app/src/main/res/layout/items_income.xml
+++ b/app/src/main/res/layout/items_income.xml
@@ -18,7 +18,7 @@
             android:id="@+id/labelTitleItemsIncome"
             android:layout_width="120dp"
             android:layout_height="18dp"
-            android:text="@string/TiTle"
+            android:text="@string/title"
             android:textColor="@color/black"
             android:textSize="12sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -57,7 +57,7 @@
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="@string/CaTegory"
+            android:text="@string/category"
             android:textColor="@color/black"
             android:textSize="12sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -82,7 +82,7 @@
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="@string/aMount"
+            android:text="@string/amount"
             android:textColor="@color/black"
             android:textSize="12sp"
             app:layout_constraintStart_toStartOf="parent"
